--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <title>WebStart</title>
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <header class="header">
+        <div class="container">
+            <div class="menu">
+                <div class="logo menu__logo">Repair Design Project</div>
+                <nav class="nav menu__nav">
+                    <a href="#" class="nav__item">Главная</a>
+                    <a href="#" class="nav__item">Проекты</a>
+                    <a href="#" class="nav__item">Замер</a>
+                    <a href="#" class="nav__item">Команда</a>
+                    <a href="#" class="nav__item">Отзывы</a>
+                    <a href="#" class="nav__item">Контакты</a>
+                </nav>
+                <!-- /.nav -->
+                <div class="contacts menu__contacts">
+                    <a href="tel:+79997683299" class="phone contacts_phone">+7 (999) 768-32-99</a>   
+                </div>
+                <button class="button contacts__buttom button--primary">Заказать звонок</button>
+            </div>
+            <!-- /.menu -->
+        </div>
+        <!-- /.container -->
+    </header>
     
 </body>
 </html>
