--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStart</title>
+    <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="menu">
-                <div class="logo menu__logo">Repair Design Project</div>
+                <div class="logo menu__logo">
+                    <a href="index.html" class="logo__link">Repair Design Project</a>
+                </div>
                 <nav class="nav menu__nav">
                     <a href="#" class="nav__item">Главная</a>
                     <a href="#" class="nav__item">Проекты</a>
@@ -34,19 +38,20 @@
             <div class="instagram hero__instagram">
                 <a href="#" class="instagram__link">instagram</a>
             </div>
-            <div class="hero__content">
-                <div class="container">
+            <div class="container">
+                <div class="hero__content">
+
                     <h1 class="title hero__title">Турецкий ремонт 
-                        в Ростове-на-дону</h1>
+                        в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
                     <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
                     <button class="button hero__button button--primary">Рассчитать стоимость</button>
     
-                    <button class="button hero__button button-outline">Отправить заявку</button>
+                    <button class="button hero__button button--outline">Отправить заявку</button>
                 </div>
-                <!-- /.container -->
+                <!-- /.hero__container -->
             </div>
-            <!-- /.hero__content -->
-            <a href="#" class="scroll-down">листайте вниз</a>
+            <!-- /.container -->
+            <a href="#" class="hero__scroll-down">листайте вниз</a>
         </section>
         <!-- /.hero -->
     </div>
