feat: add control section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <!-- /.container -->
     </header>
-    <div class="main">
+    <main class="main">
         <section class="hero">
             <div class="instagram hero__instagram">
                 <a href="#" class="instagram__link">instagram</a>
@@ -54,7 +54,22 @@
             <a href="#" class="hero__scroll-down">листайте вниз</a>
         </section>
         <!-- /.hero -->
-    </div>
+        <section class="section controle">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading">Онлайн контроль</h2>
+                    <!-- /.section-title__heading -->
+                    <div class="section-title__image">
+                        <img src="img/video.svg" alt="image">
+                    </div>
+                    <!-- /.section-title__image -->
+                </div>
+                <!-- /.section-title -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section controle -->
+    </main>
     
 </body>
 </html>
