--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <!-- /.container -->
     </header>
-    <main class="main">
+    <main>
         <section class="hero">
             <div class="instagram hero__instagram">
                 <a href="#" class="instagram__link">instagram</a>
