--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </nav>
                 <!-- /.nav -->
                 <div class="contacts menu__contacts">
-                    <a href="tel:+79997683299" class="phone contacts_phone">+7 (999) 768-32-99</a>   
+                    <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>   
                 </div>
-                <button class="button contacts__buttom button--primary">Заказать звонок</button>
+                <button class="button contacts__button button--primary">Заказать звонок</button>
             </div>
             <!-- /.menu -->
         </div>
