--- a/index.html
+++ b/index.html
@@ -304,6 +304,28 @@
         </section>
         <!-- /.design -->
     </main>
-    
+    <div class="modal">
+        <div class="modal__dialog">
+            <button class="modal__close"></button>              
+            <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
+            <form action="#" class="form modal__form">
+                <label for="user-name" class="label form__label label--light">Имя</label>
+                <input type="text" class="input form__input" id="user-name" placeholder="Как вас зовут:">
+                <label for="user-phone" class="label form__label label--light" id="user-phone">Телефон</label>
+                <input type="tel" class="input form__input" placeholder="Ваш номер телефона:">
+                <label for="user-email" class="label form__label label--light" id="user-email">Email</label>
+                <input type="email" class="input form__input"  placeholder="Ваш email">
+                <div class="policy">
+                    <input type="checkbox" name="policy-checkbox" id="policy-checkbox">
+                    <label for="policy-checkbox">Я соглашаюсь с обработкой данных</label>
+                </div>
+                <!-- /.policy -->
+                <button class="button button--primary modal__button">Отправить заявку</button>
+            </form>
+            <!-- /.form modal__form -->
+        </div>
+        <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
 </body>
 </html>
