--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
             <!-- /.container -->
         </section>
         <!-- /.design -->
+        <div class="scroll_top">
+            <a href="#" id="scroll_top" title="Наверх" class="scroll_top__link"></a>
+        </div>
+        
     </main>
     <div class="modal">
         <div class="modal__dialog">
@@ -327,6 +331,7 @@
         <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
