--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="section section--dark projects">
             <div class="container">
                 <div class="row">
-                    <div class="col-text">
+                    <div class="col-50 col-50__content">
                         <div class="section-title section-title--left">
                             <h2 class="section-title__heading section-title__heading--primary">Завершенные <span class="section-title__word">проекты</span></h2>
                             <!-- /.section-title__heading --> 
@@ -77,7 +77,7 @@
                                        <span class="swiper-slide__value">Ростов-на-дону</span>
                                     </div>
                                     <!-- /.swiper-slide__text -->
-                                    <div class="swiper-slide__text--right">
+                                    <div class="swiper-slide__text">
                                         <h3 class="swiper-slide__heading">Площадь:</h3> 
                                         <span class="swiper-slide__value">81 м<sup>2</sup></span>
                                     </div>
@@ -87,7 +87,7 @@
                                         <span class="swiper-slide__value">3,5 месяца</span>
                                     </div>
                                     <!-- /.swiper-slide__text -->
-                                    <div class="swiper-slide__text--right">
+                                    <div class="swiper-slide__text">
                                         <h3 class="swiper-slide__heading">Стоимость:</h3> 
                                         <span class="swiper-slide__value">По запросу</span>
                                     </div>
@@ -138,7 +138,7 @@
                                     <!-- /.swiper-slide__text -->
                                 </div>
                                 
-                            </div>                           
+                            </div>                       
 
                             <!-- If we need navigation buttons -->
                             <div class="swiper-button-prev"></div>
@@ -149,26 +149,26 @@
                         </div>
 
                     </div>
-                    <!-- /.col-text -->
-                    <div class="col-image">
+                    <!-- /.col-50 -->
+                    <div class="col-50 col-50__image">
                         <div class="swiper-container">
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
-                                <div class="swiper-slide swiper-slide--right">
+                                <div class="swiper-slide">
                                     <img src="./img/projects/project.jpg" alt="projects">
                                 </div>
-                                <div class="swiper-slide swiper-slide--right">
+                                <div class="swiper-slide">
                                     <img src="./img/projects/project.jpg" alt="projects">
                                 </div>
-                                <div class="swiper-slide swiper-slide--right">
+                                <div class="swiper-slide">
                                     <img src="./img/projects/project.jpg" alt="projects">
                                 </div>                              
                             </div>
                             
                         </div>
                     </div>
-                    <!-- /.col-image -->
+                    <!-- /.col-50 -->
                 </div>
                 <!-- /.row -->
             </div>
