--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                     <!-- /.card__item -->
                                 </ul>
                                 <!-- /.card__list -->
-                                <strong class="card__pricetag wow animate__slideInUp">
+                                <strong class="card__pricetag wow animate__slideInUp animate__slow">
                                     от 900 руб / м<sup>2</sup>
                                 </strong> <!-- /.card__ricetag -->
                             </div>
@@ -283,7 +283,7 @@
                                     <!-- /.card__item -->
                                 </ul>
                                 <!-- /.card__list -->
-                                <strong class="card__pricetag wow animate__slideInUp">
+                                <strong class="card__pricetag wow animate__slideInUp animate__slow">
                                     от 1800 руб / м<sup>2</sup>
                                 </strong> <!-- /.card__ricetag -->
                             </div>
@@ -315,7 +315,7 @@
                                     <!-- /.card__item -->
                                 </ul>
                                 <!-- /.card__list -->
-                                <strong class="card__pricetag wow animate__slideInUp">
+                                <strong class="card__pricetag wow animate__slideInUp animate__slow">
                                     от 4000 руб / м<sup>2</sup>
                                 </strong> <!-- /.card__ricetag -->
                             </div>
