--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@
                 <form action="#" class="form control__form">
                     <div class="control__input-group">
                         <label for="user-name" class="label form__label controle__label">Имя</label>
-                        <input type="text" class="input form__input control__input" id="user-name"      placeholder="Как вас зовут:">   
+                        <input type="text" class="input form__input control__input
+                        " id="user-name"      placeholder="Как вас зовут:">   
                     </div>
                     <div class="control__input-group">
                         <label for="user-phone" class="label form__label controle__label" id="user-phone">Телефон</label>
-                        <input type="tel" class="input form__input control__input" placeholder="Ваш номер телефона:">
+                        <input type="tel" class="input form__input control__input " placeholder="Ваш номер телефона:">
                     </div>                    
                     <button class="button button--primary control__button">Отправить</button>
                     <div class="policy control__policy">
