--- a/index.html
+++ b/index.html
@@ -197,13 +197,12 @@
                 </p>
                 <form action="#" class="form control__form">
                     <div class="control__input-group">
-                        <label for="user-name" class="label form__label controle__label">Имя</label>
-                        <input type="text" class="input form__input control__input
-                        " id="user-name"      placeholder="Как вас зовут:">   
+                        <label for="user-name" class="label form__label control__label" id="user-name">Имя</label>
+                        <input type="text" class="input form__input control__input"  placeholder="Как вас зовут:">   
                     </div>
                     <div class="control__input-group">
-                        <label for="user-phone" class="label form__label controle__label" id="user-phone">Телефон</label>
-                        <input type="tel" class="input form__input control__input " placeholder="Ваш номер телефона:">
+                        <label for="user-phone" class="label form__label control__label" id="user-phone">Телефон</label>
+                        <input type="tel" class="input form__input control__input" placeholder="Ваш номер телефона:">
                     </div>                    
                     <button class="button button--primary control__button">Отправить</button>
                     <div class="policy control__policy">
@@ -520,7 +519,7 @@
             <form action="#" class="form modal__form">
                 <div class="input-group modal__input-group">
                     <label for="user-name" class="label form__label label--light">Имя</label>
-                    <input type="text" name="userName" class="input form__input modal__input   input--light" id="user-name" placeholder="Как вас зовут:">
+                    <input type="text" name="userName" class="input form__input modal__input input--light" id="user-name" placeholder="Как вас зовут:">
                 </div>
                 <div class="input-group modal__input-group">
                     <label for="user-phone" class="label form__label label--light" id="user-phone">Телефон</label>
