--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 </div>
                 <nav class="nav menu__nav">
                     <a href="#" class="nav__item"><span class="item--primary">Главная</span></a>
-                    <a href="#" class="nav__item">Проекты</a>
-                    <a href="#" class="nav__item">Замер</a>
-                    <a href="#" class="nav__item">Команда</a>
-                    <a href="#" class="nav__item">Отзывы</a>
-                    <a href="#" class="nav__item">Контакты</a>
+                    <a href="#design" class="nav__item">Проекты</a>
+                    <a href="#typse" class="nav__item">Замер</a>
+                    <a href="#" class="nav__item" id="footer">Команда</a>
+                    <a href="#" class="nav__item" id="footer">Отзывы</a>
+                    <a href="#footer" class="nav__item">Контакты</a>
                 </nav>
                 <!-- /.nav -->
                 <div class="contacts menu__contacts">
@@ -41,7 +41,7 @@
     <main>
         <section class="hero">
             <div class="instagram hero__instagram">
-                <a href="#" class="instagram__link">instagram</a>
+                <a href="#design" class="instagram__link">instagram</a>
             </div>
             <div class="container">
                 <div class="hero__content">
@@ -56,10 +56,10 @@
                 <!-- /.hero__container -->
             </div>
             <!-- /.container -->
-            <a href="#" class="hero__scroll-down wow animate__pulse animate__delay-4s animate__repeat-2">листайте вниз</a>
+            <a href="#projects" class="hero__scroll-down wow animate__pulse animate__delay-4s animate__repeat-2">листайте вниз</a>
         </section>
         <!-- /.hero -->
-        <section class="section section--dark projects">
+        <section class="section section--dark projects" id="projects">
             <div class="container">
                 <div class="row">
                     <div class="col-50 col-50__content">
@@ -217,7 +217,7 @@
             <!-- /.container -->
         </section>
         <!-- /.section controle -->
-        <section class="section types">
+        <section class="section types" id="typse">
             <div class="container">
                 <div class="section-title types__section-title">
                     <h2 class="section-title__heading wow animate__zoomInDown animate__slow">Виды ремонта</h2>
@@ -331,7 +331,7 @@
             <!-- /.container -->
         </section>
         <!-- /.section types -->
-        <section class="section design">
+        <section class="section design" id="design">
             <div class="container">
                 <div class="section-title design__section-title">
                     <h2 class="section-title__heading wow animate__zoomInDown animate__slow">Дизайн проект</h2>
@@ -457,7 +457,7 @@
         
         
     </main>
-    <footer class="footer section--dark">
+    <footer class="footer section--dark" id="footer">
         <div class="container">
             <div class="footer__wrap">
                 <h3 class="footer__title">Остались вопросы?</h3>
