--- a/index.html
+++ b/index.html
@@ -184,12 +184,13 @@
                     <h2 class="section-title__heading control-title wow animate__zoomInDown animate__slow">Онлайн контроль</h2>
                     <!-- /.section-title__heading -->
                     <div class="section-title__image">
-                        <img src="img/video.svg" alt="image">
+                        <img src="img/video.svg" alt="video">
                     </div>
                     <!-- /.section-title__image -->
                 </div>
                 <!-- /.section-title -->
-                <div class="control__video video">
+                <div class="control__video video" id="player">
+                    <script src="https://www.youtube.com/iframe_api"></script>
                     <img src="img/play-icon.svg" alt="play" class="video__play">
                 </div>
                 <!-- /.controle__video video -->
@@ -493,13 +494,13 @@
                 <div class="footer__img">
                     <img class="footer-image" src="img/mail.png" alt="mail">
                     <img class="footer-image" src="img/instagram.png" alt="instagram">
-                </div>
-
-            </div>
-            <!-- /.footer__title footer__title--primary -->
-            <div class="map footer__map" id="map">
+                </div>               
                 
             </div>
+            <div class="map footer__map" id="map"></div>
+            </div>
+            <!-- /.container -->
+            
         </div>
         <!-- container -->
         <div class="footer__menu">
